# Pandemicpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  board.cpp  board.h  card.h  cities_data.txt  city.cpp  city.h  disease.h  main.cpp  player.cpp  player.h  readme.md
scripts/: clang-format.sh  clang-tidy.sh  cppcheck.sh
src/: CMakeLists.txt  board.cpp  board.h  card.cpp  card.h  city.cpp  city.h  disease.h  game.cpp  game.h  instrumentor.h  logging.cpp  logging.h  main.cpp  player.cpp  player.h  utils.cpp  utils.h
test/: CMakeLists.txt  board_test.cpp  city_test.cpp  commondata_test.h  disease_test.cpp  main_test.cpp  utils_test.cpp
